# MalextyST

./: README.md
LegacyCode/: Todo.md
LegacyCode/GUI/PassGUI/: CMakeLists.txt  predict.cpp  predict.hpp  satellites.db  search.hpp  window.cpp  window.hpp
LegacyCode/GUI/PassPredict/: CMakeLists.txt  main.cpp
LegacyCode/GUI/SQLite-Search-WX/: CMakeLists.txt  colorManager.hpp  main.cpp  satellites.db  search.cpp  window.cpp  window.hpp
LegacyCode/MalextyST_1-0/: CMakeLists.txt  DEPENDENCIES  common.hpp  commonFunctions.hpp  config.json  dGenConfig.hpp  info.txt  mChangeConfigHandler.cpp  mChangeConfigHandler.hpp  mExitHandler.cpp  mExitHandler.hpp  mGenConfig.cpp  mGenConfig.hpp  mMainHandler.cpp  mMainHandler.hpp  mSearchDB.cpp  mSearchDB.hpp  mTleAgeCheck.cpp  mTleAgeCheck.hpp  mUpdateTLE.cpp  mUpdateTLE.hpp  main.cpp  sChangeConfigHandler.cpp  sChangeConfigHandler.hpp  sConfigHandler.cpp  sConfigHandler.hpp  sFileHandler.cpp  sFileHandler.hpp  sGenConfig.cpp  sGenConfig.hpp  sSearchDB.cpp  sSearchDB.hpp  sSerialHandler.cpp  sSerialHandler.hpp  sTleAgeCheck.cpp  sTleAgeCheck.hpp  sTrackSat.cpp  sTrackSat.hpp  sUpdateTLE.cpp  sUpdateTLE.hpp  (+1 more)
LegacyCode/MalextyST_1-0/Serial/include/: serial.h
LegacyCode/MalextyST_1-0/Serial/include/impl/: unix.h
LegacyCode/MalextyST_1-0/Serial/src/: serial.cc
LegacyCode/MalextyST_1-0/Serial/src/impl/: unix.cc
LegacyCode/MalextyST_1-0/Serial/src/impl/list_ports/: list_ports_linux.cc  list_ports_osx.cc
LegacyCode/PhysicalPart/: Notes.txt
LegacyCode/PhysicalPart/SerialAzControl/: SerialAzControl.ino  SerialAzControl_PC.cpp
LegacyCode/PhysicalPart/SerialReceive/: SerialReceive.ino
LegacyCode/oldCode/: SGP4-poc5-serial.cpp  listPortSelectV2.cpp  listPortsSelect.cpp
